src/objects/phone_plans__x.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Cost</description>
        <externalDeveloperName>Cost</externalDeveloperName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Limit__c</fullName>
        <description>Data_Limit</description>
        <externalDeveloperName>Data_Limit</externalDeveloperName>
        <label>Data_Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Limit__c</fullName>
        <description>Text_Limit</description>
        <externalDeveloperName>Text_Limit</externalDeveloperName>
        <label>Text_Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>